@@ -57,6 +57,10 @@ $Id$
 10. Added support for term vectors.  See Field#isTermVectorStored().
     (Grant Ingersoll, Cutting & Dmitry)
 
+11. Fixed the old bug with escaping of special characters in query
+    strings: http://issues.apache.org/bugzilla/show_bug.cgi?id=24665
+    (Jean-Francois Halleux via Otis)
+
 
 1.3 final
 
